# animationsLearning

./: README.md  ascii_generator.py
FallingMarbles/: FallingMarbles.csproj  MapElementTracker.cs  Program.cs  README.md
FallingMarbles/mapsections/: MapSection.cs  ModularMapBuilder.cs
FallingObjects/: FallingObjects.csproj  Program.cs
HypnoticPatterns/: HypnoticPatterns.csproj  Program.cs  output.webm
InfiniteMarbleRun/: InfiniteMarbleRun.csproj  Program.cs  README.md  TODO.md
InfiniteMarbleRun/Core/: Course.cs  MathHelper.cs
InfiniteMarbleRun/Generation/: CourseGenerator.cs  FixedCourseGenerator.cs
InfiniteMarbleRun/Marbles/: Marble.cs
InfiniteMarbleRun/Physics/: MarbleRunSimulation.cs  MarbleRunSimulation.cs.new
InfiniteMarbleRun/Rendering/: MarbleRunRenderer.cs  ParticleEffect.cs
MazeEscape/: CMakeLists.txt  README.md  maze_demo.c  setup.bat  setup.sh
MazeEscape/include/: maze_escape.h
MazeEscape/include/characters/: character.h
MazeEscape/include/maze/: maze.h
MazeEscape/include/physics/: physics.h
MazeEscape/include/rendering/: renderer.h
MazeEscape/include/video/: encoder.h
MazeEscape/src/: main.c
MazeEscape/src/characters/: character.c
MazeEscape/src/maze/: maze.c
MazeEscape/src/physics/: physics.c
MazeEscape/src/rendering/: renderer.c
MazeEscape/src/video/: encoder.c
MazeEscape/tests/: CMakeLists.txt  test_main.c
artanimation/: README.md  ascii_generator.py  example.py  memory_manager.py  prerender_optimizer.py  requirements.txt
